WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88136
[chromium] Fix software rendering for device-scale-factor > 1
https://bugs.webkit.org/show_bug.cgi?id=88136
Summary
[chromium] Fix software rendering for device-scale-factor > 1
Sadrul Habib Chowdhury
Reported
2012-06-01 14:24:09 PDT
The device-scale factor needs to be set correctly on the GraphicsContext.
Attachments
Patch
(3.25 KB, patch)
2012-06-01 14:33 PDT
,
Sadrul Habib Chowdhury
no flags
Details
Formatted Diff
Diff
Patch
(7.97 KB, patch)
2012-06-01 17:37 PDT
,
Sadrul Habib Chowdhury
no flags
Details
Formatted Diff
Diff
Patch
(7.97 KB, patch)
2012-06-01 18:43 PDT
,
Sadrul Habib Chowdhury
no flags
Details
Formatted Diff
Diff
Patch
(13.90 KB, patch)
2012-06-01 18:47 PDT
,
Sadrul Habib Chowdhury
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Sadrul Habib Chowdhury
Comment 1
2012-06-01 14:33:51 PDT
Created
attachment 145377
[details]
Patch
WebKit Review Bot
Comment 2
2012-06-01 14:37:11 PDT
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
James Robinson
Comment 3
2012-06-01 15:55:18 PDT
Tests?
Sadrul Habib Chowdhury
Comment 4
2012-06-01 17:37:36 PDT
Created
attachment 145410
[details]
Patch
Sadrul Habib Chowdhury
Comment 5
2012-06-01 17:38:36 PDT
(In reply to
comment #3
)
> Tests?
Added a reftest. Please take a look.
Gustavo Noronha (kov)
Comment 6
2012-06-01 17:46:32 PDT
Comment on
attachment 145410
[details]
Patch
Attachment 145410
[details]
did not pass gtk-ews (gtk): Output:
http://queues.webkit.org/results/12863700
Build Bot
Comment 7
2012-06-01 18:00:56 PDT
Comment on
attachment 145410
[details]
Patch
Attachment 145410
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/12870635
Sadrul Habib Chowdhury
Comment 8
2012-06-01 18:43:59 PDT
Created
attachment 145419
[details]
Patch
Sadrul Habib Chowdhury
Comment 9
2012-06-01 18:47:02 PDT
Created
attachment 145420
[details]
Patch
WebKit Review Bot
Comment 10
2012-06-04 13:11:56 PDT
Comment on
attachment 145420
[details]
Patch Clearing flags on attachment: 145420 Committed
r119423
: <
http://trac.webkit.org/changeset/119423
>
WebKit Review Bot
Comment 11
2012-06-04 13:12:01 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 12
2012-06-05 10:58:24 PDT
The test added here crashes reproducibly on Mac WebKit2, <
http://build.webkit.org/results/Lion%20Debug%20(WebKit2%20Tests)/r119496%20(7909)/fast/hidpi/device-scale-factor-paint-crash-log.txt
> Also, why are expected results for this test in /chromium? It's a retest. Finally, [chromium] prefix is not appropriate here. Prefixes like this are meant to mark bugs that are of absolutely no interest to people working on other ports. This change is obviously touching non-chromium code.
Sadrul Habib Chowdhury
Comment 13
2012-06-05 11:04:58 PDT
(In reply to
comment #12
)
> The test added here crashes reproducibly on Mac WebKit2, <
http://build.webkit.org/results/Lion%20Debug%20(WebKit2%20Tests)/r119496%20(7909)/fast/hidpi/device-scale-factor-paint-crash-log.txt
> > > Also, why are expected results for this test in /chromium? It's a retest.
Indeed. I am unsure why the expected results were added (in
http://trac.webkit.org/changeset/119442
)
> > Finally, [chromium] prefix is not appropriate here. Prefixes like this are meant to mark bugs that are of absolutely no interest to people working on other ports. This change is obviously touching non-chromium code.
The 'main' change in this patch is in chromium, and the non-chromium changes are in InternalSettings (and related changes in WebCore.exp.in etc. files). So I had marked it as [chromium]. My bad.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug