.: [chromium] Fix software rendering for device-scale-factor > 1 https://bugs.webkit.org/show_bug.cgi?id=88136

Patch by Sadrul Habib Chowdhury <sadrul@chromium.org> on 2012-06-04
Reviewed by Darin Fisher.

Export WebCore::Page::setDeviceScaleFactor and WebCore::Settings::setDefaultDeviceScaleFactor.

* Source/autotools/symbols.filter:

Source/WebCore: [chromium] Fix software rendering for device-scale-factor > 1
https://bugs.webkit.org/show_bug.cgi?id=88136

Patch by Sadrul Habib Chowdhury <sadrul@chromium.org> on 2012-06-04
Reviewed by Darin Fisher.

Test: fast/hidpi/device-scale-factor-paint.html

* WebCore.exp.in:
* testing/InternalSettings.cpp:
(WebCore::InternalSettings::setDeviceScaleFactor):
(WebCore):
* testing/InternalSettings.h:
(InternalSettings):
* testing/InternalSettings.idl:

Source/WebKit/chromium: [chromium] Fix software rendering for larger device-scale-factor
https://bugs.webkit.org/show_bug.cgi?id=88136

Patch by Sadrul Habib Chowdhury <sadrul@chromium.org> on 2012-06-04
Reviewed by Darin Fisher.

The fix is to apply the device-scale factor on the GraphicsContext.
(and add a WebWidgetClient::deviceScaleFactor method to facilitate that).

* public/WebWidgetClient.h:
(WebWidgetClient):
(WebKit::WebWidgetClient::deviceScaleFactor):
* src/PageWidgetDelegate.cpp:
(WebKit::PageWidgetDelegate::paint):
* src/WebPopupMenuImpl.cpp:
(WebKit::WebPopupMenuImpl::paint):

Source/WebKit2: [chromium] Fix software rendering for device-scale-factor > 1
https://bugs.webkit.org/show_bug.cgi?id=88136

Patch by Sadrul Habib Chowdhury <sadrul@chromium.org> on 2012-06-04
Reviewed by Darin Fisher.

Export WebCore::Page::setDeviceScaleFactor and WebCore::Settings::setDefaultDeviceScaleFactor.

* win/WebKit2.def:
* win/WebKit2CFLite.def:

LayoutTests: [chromium] Fix software rendering for device-scale-factor > 1
https://bugs.webkit.org/show_bug.cgi?id=88136

Patch by Sadrul Habib Chowdhury <sadrul@chromium.org> on 2012-06-04
Reviewed by Darin Fisher.

* fast/hidpi/device-scale-factor-paint.html: Added.
* platform/chromium/fast/hidpi/device-scale-factor-paint-expected.html: Added.

Canonical link: https://commits.webkit.org/106090@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119423 268f45cc-cd09-0410-ab3c-d52691b4dbfc